# AudioMaster

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  config.toml.example  index.html  package-lock.json  package.json  vite.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  deploy.yml  pages.yml  release.yml
crates/mastering-cli/: Cargo.toml
crates/mastering-cli/src/: main.rs
crates/mastering-cli/src/commands/: analyze.rs  backends.rs  config.rs  master.rs  mod.rs
crates/mastering-core/: Cargo.toml
crates/mastering-core/src/: cache.rs  config.rs  error.rs  gpu.rs  lib.rs  types.rs
crates/mastering-core/src/analysis/: decode.rs  metrics.rs  mod.rs
crates/mastering-core/src/backends/: ai.rs  local_ml.rs  matchering.rs  mod.rs
crates/mastering-core/src/pipeline/: mod.rs
crates/mastering-core/tests/: integration.rs
docs/: CNAME  index.html  style.css
docs/dev/: architecture.md
docs/runbooks/: incident-response.md
docs/user/: quick-start.md
python/: apply_fx.py  matchering_bridge.py  ml_inference.py  requirements.txt
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  telemetry.rs
src/components/: AnalysisPanel.vue  ErrorDialog.vue  FilePanel.vue  MainLayout.vue  MasteringDialog.vue  ProcessingDialog.vue  SettingsDialog.vue  ToastNotification.vue  TrackList.vue  WaveformCanvas.vue  WorkflowBar.vue
src/composables/: useAnalytics.js  useMastering.js  useToast.js
src/styles/: animations.css  main.css
website/: robots.txt  sitemap.xml
