[package]
name = "mastering-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for AI-powered music mastering"

[[bin]]
name = "mastering"
path = "src/main.rs"

[dependencies]
mastering-core = { path = "../mastering-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde_json = "1"
indicatif = "0.17"
colored = "3"
